--- a/src/posts/keymaps/tw1t611.md
+++ b/src/posts/keymaps/tw1t611.md
@@ -12,7 +12,7 @@ isTapDanceEnabled: false
 keybindings: [Vim]
 keyboard: MiniDox
 keyCount: 36
-keymapImage: https://imgur.com/M95KSke.png
+keymapImage: tw1t611.png
 keymapUrl: https://github.com/qmk/qmk_firmware/blob/master/keyboards/maple_computing/minidox/keymaps/tw1t611
 languages: [German, English]
 layerCount: 4
