Ferris sweep -> Ferris

--- a/src/posts/keymaps/canglong20071221.md
+++ b/src/posts/keymaps/canglong20071221.md
@@ -10,7 +10,7 @@ isComboEnabled: true
 isSplit: true
 isTapDanceEnabled: false
 keybindings: [Vim]
-keyboard: Ferris Sweep
+keyboard: Ferris
 keyCount: 34
 keymapImage: https://raw.githubusercontent.com/canglong20071221/zmk-config/refs/heads/main/images/my_keymap.svg
 keymapUrl: 
