Strip suburl from keymap URL in canglong20071221.md

--- a/src/posts/keymaps/canglong20071221.md
+++ b/src/posts/keymaps/canglong20071221.md
@@ -13,7 +13,7 @@ keybindings: [Vim]
 keyboard: Ferris
 keyCount: 34
 keymapImage: https://raw.githubusercontent.com/canglong20071221/zmk-config/main/images/my_keymap.svg
-keymapUrl: https://github.com/canglong20071221/zmk-config/blob/main/config/cradio.keymap
+keymapUrl: https://github.com/canglong20071221/zmk-config/
 languages: [English]
 layerCount: 5
 OS: [Windows, MacOS, Linux]
