Replace dumb quotes by smart quotes

--- a/src/posts/keymaps/canglong20071221.md
+++ b/src/posts/keymaps/canglong20071221.md
@@ -18,7 +18,7 @@ languages: [English]
 layerCount: 5
 OS: [Windows, MacOS, Linux]
 stagger: columnar
-summary: A "Zero Reach" 34-key layout optimized for low-profile Choc switches. Features a virtual number row via vertical barring (pressing the gap between keys), a mouse layer anchored on the middle finger (Hold-E), and reliable Home Row Mods.
+summary: A “Zero Reach” 34-key layout optimized for low-profile Choc switches. Features a virtual number row via vertical barring (pressing the gap between keys), a mouse layer anchored on the middle finger (Hold-E), and reliable Home Row Mods.
 title: Vertical Barring Sweep
 writeup: https://github.com/canglong20071221/zmk-config/blob/main/README.md
 ---
